made a table in index.html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home page</title>
+    <style>
+        body{
+            margin: 30px;
+        }
+        thead{
+            font-weight: bold;
+            font-style: italic;
+        }
+        tbody{
+            padding: 3px;
+        }
+    </style>
 </head>
 <body>
+    <h1>Hello everyone!</h1><br>
+    <table>
+        <thead>
+            <tr>
+                <th>Name </th>
+                <th>Roll no</th>
+                <th>cgpa</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Mayuresh Chaudhari</td>
+                <td>120</td>
+                <td>9</td>
+            </tr>
+            <tr>
+                <td>Swaraj Waykar</td>
+                <td>94</td>
+                <td>9.4</td>
+            </tr>
+        </tbody>
+    </table>
     
 </body>
-</
