--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
         thead{
             font-weight: bold;
             font-style: italic;
+            
         }
-        tbody{
+        table{
+            border-collapse: collapse;
+        }
+        tr,th,td{
             padding: 3px;
+            border: 3px solid black;
+            border-collapse: collapse;
         }
     </style>
 </head>
