--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 </head>
 <body>
     <h1>Hello everyone!</h1><br>
+    <h3>The followinf is an example of a table using html tags    </h3>
     <table>
         <thead>
             <tr>
